# Home_ex_PW_6

./: README.md  SQLiteDB.sqlite  main.py  pyproject.toml  query.py
