[tool.poetry]
name = "dz-pw-6"
version = "0.1.0"
description = ""
authors = ["KorenbAS78 <KorenbAS78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
